--- a/src/frontend/src/App.css
+++ b/src/frontend/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  background-color: #2a2f36;
 }
 
 .App-logo {
@@ -13,16 +13,15 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
+./*App-link {
   color: #61dafb;
 }
-
+*/
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
