--- a/client/src/pages/EquipmentBrowser/EquipmentBrowser.module.css
+++ b/client/src/pages/EquipmentBrowser/EquipmentBrowser.module.css
@@ -17,3 +17,44 @@
 .timepicker > * {
   margin: 5px;
 }
+
+.equipmentPage {
+  background: rgb(240, 240, 243);
+  display: flex;
+  padding: 20px;
+}
+
+.equipmentPage > * {
+  margin: 10px;
+}
+
+.equipmentGrid {
+  display: flex;
+  background: rgb(171, 172, 231);
+  justify-content: space-between;
+  max-width: 100%;
+  flex-flow: row wrap;
+  width: 65%;
+}
+
+.equipmentGrid > * {
+  flex-flow: row-wrap;
+  align-items: center;
+}
+
+.equipmentContainer {
+  display: flex;
+  background: rgb(57, 60, 241);
+  flex-flow: row wrap;
+}
+
+.equipment {
+  padding: 10px;
+  width: 25%;
+}
+
+.selectedEquipment {
+  display: flex;
+  background: rgb(176, 177, 231);
+  flex-grow: 1;
+}
