--- a/client/src/pages/EquipmentBrowser/EquipmentBrowser.module.css
+++ b/client/src/pages/EquipmentBrowser/EquipmentBrowser.module.css
@@ -32,9 +32,10 @@
   display: flex;
   background: rgb(171, 172, 231);
   justify-content: space-between;
-  max-width: 100%;
+  max-width: 65%;
   flex-flow: row wrap;
-  width: 65%;
+  /* width: 65%; */
+  /* flex-basis: 65%; */
 }
 
 .equipmentGrid > * {
@@ -46,6 +47,7 @@
   display: flex;
   background: rgb(176, 177, 231);
   flex-grow: 1;
+  flex-basis: 30%;
 }
 
 .collapsehead {
@@ -54,4 +56,8 @@
   margin-bottom: 10px;
   border: 1px solid #0067cd;
   cursor: pointer;
+}
+
+.wrapper {
+  width: 65%;
 }
