Use Button component, cleanup css

--- a/client/src/pages/MemberDashboard/MemberDashboard.module.css
+++ b/client/src/pages/MemberDashboard/MemberDashboard.module.css
@@ -1,47 +1,12 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
 }
 
 .backdrop {
   background: #eceff8;
-}
-
-.requestbox {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 50px;
-}
-
-.requestheader {
-  margin-right: 800px;
-}
-
-.newreqbutton {
-  background: #0766bd;
-  color: #fff;
-  align-self: left;
-}
-
-.menuitem {
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.menubar {
-  display: flex;
-  justify-content: space-between;
-}
-.viewbutton {
-  background: #0766bd;
-  color: #fff;
-  align-self: left;
-}
-
-.editbutton {
-  background: #0766bd;
-  color: #fff;
-  align-self: left;
 }
 
 .projectreq {
@@ -49,8 +14,6 @@
 }
 
 .reqtable {
-  /* display: flex; */
-  background: #fff;
   margin-bottom: 10px;
   width: 100%;
   justify-content: space-between;
