--- a/client/src/components/ModalDialog/ModalDialog.module.css
+++ b/client/src/components/ModalDialog/ModalDialog.module.css
@@ -13,18 +13,18 @@
   width: 100%;
   height: 100%;
   pointer-events: all;
-  background: rgba(0, 0, 0, .25);
+  background: rgba(0, 0, 0, 0.25);
 }
 
 .modal {
   background: white;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px 80px;
   border-radius: 10px;
-  box-shadow: 0 10px 40px -20px rgba(0, 0, 0, .25);
+  box-shadow: 0 10px 40px -20px rgba(0, 0, 0, 0.25);
 }
 
 .modalContent {
