updated module w/ luke's help to adjust, pseudocoded other parts

--- a/client/src/pages/EquipmentBrowser/EquipmentBrowser.module.css
+++ b/client/src/pages/EquipmentBrowser/EquipmentBrowser.module.css
@@ -67,3 +67,8 @@
 .flex-container {
   display: flex;
 }
+
+.equipmentModal > div {
+  width: 600px; /* adjust width if need */
+  max-width: 100vw;
+}
