--- a/client/src/components/CheckoutTimePicker/CheckoutTimePicker.module.css
+++ b/client/src/components/CheckoutTimePicker/CheckoutTimePicker.module.css
@@ -1,5 +1,13 @@
 .container {
   display: flex;
+  width: 100px;
+  height: 500px;
+  left: 117px;
+  right: 117px;
+  top: 201px;
+
+  background: #ffffff;
+  border-radius: 10px;
 }
 
 .column {
@@ -7,4 +15,32 @@
   flex-direction: column;
   margin-left: 5px;
   margin-right: 5px;
+}
+
+.weekday {
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  color: #000000;
+}
+.date {
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  display: flex;
+  color: #628aba;
+}
+
+.timeslot {
+  border: 2px solid #196ed2;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.selectbutton {
+  background: #3279d5;
+  border-radius: 5px;
+  color: #fff;
 }
