--- a/client/src/pages/MemberDashboard/MemberDashboard.module.css
+++ b/client/src/pages/MemberDashboard/MemberDashboard.module.css
@@ -36,10 +36,7 @@
 .tableClass {
   width: 100%;
   border-spacing: 0 14px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding: 15px 30px;
 }
 
 .tableClass td {
