--- a/client/src/pages/MemberDashboard/MemberDashboard.module.css
+++ b/client/src/pages/MemberDashboard/MemberDashboard.module.css
@@ -14,8 +14,8 @@
 }
 
 .searchBar {
-  float: right;
-  padding-right: 30px;
+  /* float: right;
+  padding-right: 30px; */
 }
 
 .requestheader {
@@ -23,10 +23,15 @@
   font-style: normal;
   font-size: 18px;
   padding: 0 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
-.requestheader hr {
+.backdrop hr {
   border: 1px solid #628aba;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .tableClass {
