--- a/client/src/pages/EquipmentBrowser/EquipmentBrowser.module.css
+++ b/client/src/pages/EquipmentBrowser/EquipmentBrowser.module.css
@@ -77,7 +77,9 @@
 }
 
 /* Add some space between the bottom of the content and the bottom of the container so that the blue border goes all the way around (this is a nitpicky detail) */
-.collapsehead :global(.Collapsible__contentInner) { margin-bottom: 10px; }
+.collapsehead :global(.Collapsible__contentInner) {
+  margin-bottom: 10px;
+}
 
 .wrapper {
   width: 65%;
